--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./app/select/css/main.css" />
 </head>
+
 <body>
     <div class="app-wrapper-page" id="app">
         <div class="app-wrapper">
@@ -16,19 +17,19 @@
                     <span>NEW!</span>
                 </div>
             </div>
-            <div class="app-preview-wrapper">
-        
+            <div class="app-preview-region">
             </div>
         </div>
     </div>
     <script>
         import('./app/select/js/main.js')
-        .then(app=>{
-            window.app=app.default;
-            app.default.start();
-        }).catch(error=>{
-            console.warn(app,error);
-        });
+            .then(app => {
+                window.app = app.default;
+                app.default.start();
+            }).catch(error => {
+                console.warn(app, error);
+            });
     </script>
 </body>
+
 </html>
