fixed colors and added preview image. cleaned up files

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="app-wrapper-page" id="app">
         <div class="app-wrapper">
             <div class="app-interface-wrapper">
-                <div class="app-interface-button" app-action="new">
-                    <span>NEW!</span>
+                <div class="app-new-button-wrapper">
+                    <div class="app-interface-button" app-action="new">
+                        <span>NEW!</span>
+                    </div>
                 </div>
                 <div class="app-new-interface-parent"></div>
             </div>
