--- a/edit/index.html
+++ b/edit/index.html
@@ -13,6 +13,16 @@
     <div class="app-wrapper-page" id="app">
 
     </div>
+    <div id="app-loading" style="opacity: 1;">
+        <link rel="stylesheet" type="text/css" media="screen" href="/app/load.css">
+        <div class="app-loading">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="up"></div>
+            <div class="down"></div>
+        </div>
+        <div class="app-loading-text">Loading</div>
+    </div>
     <script>
         import('../app/build/editor/js/main.js')
             .then(app => {
