--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         </div>
     </div>
     <div id="app-loading" style="opacity: 1;">
-        <div class="left"></div>
-        <div class="right"></div>
-        <div class="up"></div>
-        <div class="down"></div>
+        <link rel="stylesheet" type="text/css" media="screen" href="/app/load.css">
+        <div class="app-loading">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="up"></div>
+            <div class="down"></div>
+        </div>
+        <div class="app-loading-text">Loading</div>
     </div>
     <script>
         import('./app/build/select/js/main.js')
