--- a/present/index.html
+++ b/present/index.html
@@ -6,12 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Presentations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/app/editor/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/app/present/css/main.css" />
 </head>
 
 <body>
-    <div class="app-wrapper-page" id="app">
-
+    <div class="app-wrapper-page" id="app" style="opacity: 0;background-color: #6d0083;">
+        TEST
+    </div>
+    <div id="app-loading" style="opacity: 1;">
+        <link rel="stylesheet" type="text/css" media="screen" href="/app/load.css">
+        <div class="app-loading">
+            <div class="left"></div>
+            <div class="right"></div>
+            <div class="up"></div>
+            <div class="down"></div>
+        </div>
+        <div class="app-loading-text">Loading</div>
     </div>
     <script>
         import('../app/build/present/js/main.js')
