--- a/present/index.html
+++ b/present/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class="app-wrapper-page" id="app" style="opacity: 0;background-color: #6d0083;">
-        TEST
+        <div id="debug"></div>
+        <div id="components"></div>
     </div>
     <div id="app-loading" style="opacity: 1;">
         <link rel="stylesheet" type="text/css" media="screen" href="/app/load.css">
