--- a/edit/index.html
+++ b/edit/index.html
@@ -13,7 +13,7 @@
     <div class="app-wrapper-page" id="app">
 
     </div>
-    <div id="app-loading" style="opacity: 1;">
+    <div id="app-loading" class="app-loading-wrapper" style="opacity: 1;">
         <link rel="stylesheet" type="text/css" media="screen" href="/app/load.css">
         <div class="app-loading">
             <div class="left"></div>
